--- a/webapp/WEB-INF/conf/plugins/liquibase-plugin.properties
+++ b/webapp/WEB-INF/conf/plugins/liquibase-plugin.properties
@@ -2,7 +2,7 @@
 
 #######################################################################################################
 # Default Labels for XPage
-liquibase-plugin.pageTitle=liquibase-plugin
-liquibase-plugin.pagePathLabel=liquibase-plugin
+liquibase.pageTitle=liquibase
+liquibase.pagePathLabel=liquibase
 
 liquibase.enabled.at.startup=false
