LUT-26623 : Smarter liquibase startup will selectively run SQL depending on database state

--- a/webapp/WEB-INF/conf/plugins/liquibase-plugin.properties
+++ b/webapp/WEB-INF/conf/plugins/liquibase-plugin.properties
@@ -6,3 +6,6 @@ liquibase.pageTitle=liquibase
 liquibase.pagePathLabel=liquibase
 
 liquibase.enabled.at.startup=false
+liquibase.first.run.request=select count(*) FROM information_schema.tables where table_name='DATABASECHANGELOG';
+liquibase.empty.db.request=SELECT count(*) FROM information_schema.tables where table_schema=database();
+liquibase.accept.snapshot.versions=false
