--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
 		<dependency>
 			<groupId>fr.paris.lutece</groupId>
 			<artifactId>lutece-core</artifactId>
-			<version>7.0.11-SNAPSHOT</version>
+			<version>7.0.13-SNAPSHOT</version>
 			<type>lutece-core</type>
 		</dependency>
 		<dependency>
@@ -62,6 +62,12 @@
 			<groupId>com.mattbertolini</groupId>
 			<artifactId>liquibase-slf4j</artifactId>
 			<version>4.0.0</version>
+		</dependency>
+		<!-- Explicit dependency to use DocumentBuilderFactory -->
+		<dependency>
+			<groupId>xml-apis</groupId>
+			<artifactId>xml-apis</artifactId>
+			<version>1.4.01</version>
 		</dependency>
 	</dependencies>
 
