--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<artifactId>lutece-global-pom</artifactId>
 		<groupId>fr.paris.lutece.tools</groupId>
-		<version>7.0.1</version>
+		<version>8.0.0-SNAPSHOT</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
@@ -15,7 +15,7 @@
 	<artifactId>plugin-liquibase</artifactId>
 	<packaging>lutece-plugin</packaging>
 
-	<version>1.0.0-SNAPSHOT</version>
+	<version>2.0.0-SNAPSHOT</version>
 	<name>Lutece liquibase plugin</name>
 
 	<repositories>
@@ -42,7 +42,7 @@
 		<dependency>
 			<groupId>fr.paris.lutece</groupId>
 			<artifactId>lutece-core</artifactId>
-			<version>[7.1.4-SNAPSHOT,7.9.9)</version>
+			<version>[8.0.0-SNAPSHOT,)</version>
 			<type>lutece-core</type>
 		</dependency>
 		<dependency>
