--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,4 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<parent>
 		<artifactId>lutece-global-pom</artifactId>
@@ -53,7 +50,7 @@
 		<dependency>
 		    <groupId>fr.paris.lutece.tools</groupId>
 		    <artifactId>library-sql-utils</artifactId>
-			<version>[1.0.0-SNAPSHOT,)</version>
+			<version>[1.0.0-SNAPSHOT,1.9.9)</version>
 		</dependency>
 
 		<!-- plug slf4j into liquibase logging-->
@@ -74,7 +71,7 @@
 	<properties>
 		<componentName>liquibase</componentName>
 		<jiraProjectName>LIQUIBASE</jiraProjectName>
-		<jiraComponentId></jiraComponentId>
+		<jiraComponentId />
 	</properties>
 	<scm>
 		<connection>scm:git:https://github.com/lutece-platform/lutece-tech-plugin-liquibase.git</connection>
