LUT-30797:-Manage Snapshot,RC,alpha and beta versions

--- a/webapp/WEB-INF/conf/plugins/liquibase-plugin.properties
+++ b/webapp/WEB-INF/conf/plugins/liquibase-plugin.properties
@@ -8,4 +8,9 @@ liquibase.pagePathLabel=liquibase
 liquibase.enabled.at.startup=false
 liquibase.first.run.request=select count(*) FROM information_schema.tables where table_name='DATABASECHANGELOG';
 liquibase.empty.db.request=SELECT count(*) FROM information_schema.tables where table_schema=database();
+# allow run liquibase on update file of unstable version at every startup
+# the list of unstable versions are : alpha, beta, rc (release candidate)
+liquibase.accept.unstable.versions=false
+# allow run liquibase on update file of snapshot version at every startup
 liquibase.accept.snapshot.versions=false
+
