LUT-31129:-Add a blank execution mode property to allow logging of all SQL commands without execution on the database

--- a/webapp/WEB-INF/conf/plugins/liquibase-plugin.properties
+++ b/webapp/WEB-INF/conf/plugins/liquibase-plugin.properties
@@ -13,4 +13,11 @@ liquibase.empty.db.request=SELECT count(*) FROM information_schema.tables where 
 liquibase.accept.unstable.versions=false
 # allow run liquibase on update file of snapshot version at every startup
 liquibase.accept.snapshot.versions=false
+# enable dry run mode to output sql script instead of applying changes to the database
+liquibase.dryrun=false
+liquibase.dryrun.output.file=WEB-INF/plugins/liquibase/liquibase-dryrun.sql
+# disable sending analytics to Liquibase
+liquibase.analytics.enabled=false
+# set log level for sql output (OFF, SEVERE, WARNING, INFO, CONFIG, FINE, FINER, FINEST, ALL, DEBUG)
+liquibase.sql.logLevel=DEBUG
 
